@@ -23,9 +23,9 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.0</string>
 	<key>CFBundleGetInfoString</key>
-	<string>grape July 2008 (development), Copyright 2005-2008 Technische Universiteit Eindhoven</string>
+	<string>grape July 2008 (release), Copyright 2005-2008 Technische Universiteit Eindhoven</string>
 	<key>CFBundleLongVersionString</key>
-	<string>July 2008 (development)</string>
+	<string>July 2008 (release)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright 2005-2008 Technische Universiteit Eindhoven</string>
 	<key>LSRequiresCarbon</key>
